# molecules

./: .gitignore  README.rst  env.yaml  setup.cfg  setup.py
examples/: README.rst  example_aae.py  example_vae.py  hpo_aae.py  hpo_vae.py  lstm_order_parameter.py  run_aae.sh  run_aae_hpo.sh  run_vae.sh  run_vae_dist.sh  run_vae_dist_circe.sh  run_vae_dist_lambda.sh  run_vae_dist_summit.sh  run_vae_dist_summit_entk.sh  sparse_contact_map.py  submit_summit.sh  submit_vae_dist_lambda.sh  traj_to_sparse_contact_map.py
examples/convolutional_autoencoder/embedding/: fspeptide.py
examples/convolutional_autoencoder/model_learning/: fspeptide.py  mnist.py  onefme.py
examples/outlier_detection/: optics.py  run_optics_dist_entk.sh  run_optics_dist_summit_entk.sh
examples/pytorch/: example_aae.py  example_vae.py  run_aae.sh  run_vae.sh
molecules/data/: __init__.py  utils.py
molecules/ml/: hyperparams.py
molecules/ml/callbacks/: __init__.py  adversarial_loss_callback.py  callback.py  checkpoint_callback.py  embedding2d_callback.py  embedding3d_callback.py  (+6 more)
molecules/plot/: __init__.py  tsne.py  tsne_cuml.py
molecules/sim/: __init__.py  contact_maps.py  dataset.py  openmm_reporter.py  openmm_sim.py  openmm_simulation.py  run_openmm.py
molecules/utils/: __init__.py  callback.py  checkpoint.py  read_file.py
scripts/: analyze_dset.py  concat_dsets.py  merge_dsets.py  sparse_contact_map.py  traj_to_dset.py  traj_to_sparse_contact_map.py
test/: test_callback.py  test_checkpoint.py  test_cluster.py  test_cvae.py  test_hyperparams.py  test_logging.py  test_molecules.py
(+41 files in other folders)
