[wheel]
universal = 1

[metadata]
name = molecules
version = attr: molecules.__version__
description = Machine learning for molecular dynamics.
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://github.com/braceal/molecules
author = ramanathanlab
author_email = 
license = MIT
keywords = molecules

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    h5py
    parmed==3.0
    simtk.unit
    black
    flake8
    pre-commit
    tqdm
    wandb
    Pillow
    scikit-learn
python_requires = >=3.6

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231,F541
